RESOLVED FIXED148328
AX: Fix accessibility/deleting-iframe-destroys-axcache.html test
https://bugs.webkit.org/show_bug.cgi?id=148328
Summary AX: Fix accessibility/deleting-iframe-destroys-axcache.html test
Nan Wang
Reported 2015-08-21 14:02:55 PDT
Test is marked Pass/Failure for ElCapitan+.
Attachments
patch (3.04 KB, patch)
2015-08-21 14:07 PDT, Nan Wang
no flags
patch (3.50 KB, patch)
2015-08-23 00:22 PDT, Nan Wang
no flags
Nan Wang
Comment 1 2015-08-21 14:07:28 PDT
Nan Wang
Comment 2 2015-08-21 14:09:57 PDT
Nan Wang
Comment 3 2015-08-23 00:22:30 PDT
WebKit Commit Bot
Comment 4 2015-08-23 09:26:42 PDT
Comment on attachment 259737 [details] patch Clearing flags on attachment: 259737 Committed r188835: <http://trac.webkit.org/changeset/188835>
WebKit Commit Bot
Comment 5 2015-08-23 09:26:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.