AX: Fix accessibility/deleting-iframe-destroys-axcache.html test https://bugs.webkit.org/show_bug.cgi?id=148328

Patch by Nan Wang <n_wang@apple.com> on 2015-08-23
Reviewed by Darin Adler.

Tools:

We should only expose stringValue() when value attribute is set.

* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::stringValue):
* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::stringValue):

LayoutTests:

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/166469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188835 268f45cc-cd09-0410-ab3c-d52691b4dbfc